finito con aggiustamenti e finito es. commento

--- a/RelabClient/src/app/app.component.html
+++ b/RelabClient/src/app/app.component.html
@@ -14,7 +14,7 @@
   <!--Aggiunto un cerchio alla mappa-->
   <agm-circle [latitude]="circleLat" [longitude]="circleLng"
     [radius]="radius"
-    [fillColor]="'red'"
+    [fillColor]="'green'"
     [circleDraggable]="true"
     [editable]="true"
     (radiusChange) = circleRedim($event)
