finito non premere il bottone

--- a/RelabClient/src/app/app.component.html
+++ b/RelabClient/src/app/app.component.html
@@ -35,4 +35,7 @@
   <button (click)="cambiaFoglio(foglio)"> <!--Passo le variabili come parametro -->
     Cambia
   </button>
+  <button (click)="tutteZone()">
+    Attenzione, non premere!
+  </button>
 </form>
